# glamira-analytics-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  utils.py
dbt/: dbt_project.yml
dbt/models/staging/: sources.yml  stg_events.sql  stg_events__cart_products.sql  stg_locations.sql  stg_products.sql
docs/: data_dictionary.md  data_profiling.md  problems.md  setup_guide.md
ingest/: README.md  config.py
ingest/01_mongodb_import/: import_data.sh
ingest/01_mongodb_import/exploration/: 04_event_distribution.js  05_option_labels.js
ingest/02_ip_geolocation/: lookup_ip_locations.py
ingest/03_product_crawler/: crawl_product_details.py
ingestion/: README.md  config.py  mongo.sh
ingestion/01_mongodb_import/: README.md  download_extract.sh  import_data.sh
ingestion/01_mongodb_import/exploration/: 01_collections_overview.js  03_time_range.js  (+2 more)
ingestion/02_ip_geolocation/: export_ip_locations.py  extract_unique_ips.js  ip_processing.py  lookup_ip_locations.py  mongo.sh
ingestion/03_product_crawler/: crawl_product_details.py  curlffi_crawl_no_proxy.py  extract_product_urls.js
load/01_mongo_to_gcs/: export_to_gcs.py
load/02_cloud_functions/: main.py
load/03_testing_monitoring/: README.md  profile.sh  profile_results.txt
pipeline/: config.py
pipeline/01_mongo_to_gcs/: export_to_gcs.py
pipeline/02_cloud_functions/: README.md  gcs_to_bigquery.py  main.py
pipeline/03_bigquery_schemas/: load_to_bigquery.sh  raw_events.json
pipeline/03_testing_monitoring/: README.md  profile_results.txt
transform/: README.md  dbt_project.yml  profiles.yml.example
(+16 files in other folders)
